fixed overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -166,6 +166,7 @@ nav {
     z-index: -1;
     transform: translateY(-50%);
     font-size: 1em;
+    overflow: hidden;
 
     h2 {
       padding-top: .5rem;
@@ -364,6 +365,7 @@ nav {
     text-align: center;
     z-index: -1;
     transform: translateY(-50%);
+    overflow: hidden;
 
     h2 {
       padding-top: .5rem;
@@ -430,6 +432,7 @@ nav {
     text-align: center;
     z-index: -1;
     transform: translateY(-50%);
+    overflow: hidden;
 
     .wholesale_title_mobile {
       display: block;
